# WorldOfCode

./: .gitignore  CMakeLists.txt  UIConfig.h  main.cpp
Client/: .client.cpp.swp  CMakeLists.txt  client.cpp  client.h  client_BASE_4906.cpp
Doc/: ProcessComunication.drawio  UseCase.drawio
Games/: CMakeLists.txt
Games/Snake/: CMakeLists.txt  Interface_replica.h  main.cpp
RemoteInterface/: CMakeLists.txt
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
Server/Game/: CMakeLists.txt  GameTemplate.cpp  GameTemplate.h
Server/GameCore/: CMakeLists.txt  GameCore.cpp  GameCore.h
Server/GameTemplate/: CMakeLists.txt  GameTemplate.cpp  GameTemplate.h
Server/Server/: CMakeLists.txt  server.cpp  server.h
Server/ServerClass/: CMakeLists.txt  server.cpp
Server/ServerUIComponent/: CMakeLists.txt  ServerUIComponent.cpp  ServerUIComponent.h
Server/UIC_Server/: CMakeLists.txt  UIC_Server.cpp  UIC_Server.h
Support/: CMakeLists.txt  config.h  delegate.h  jsonviewer.cpp  jsonviewer.h  qexceptionmessage.cpp  qexceptionmessage.h  qiostream.cpp  qiostream.h  table.cpp  table.h  tebleraw.cpp  tebleraw.h
UserInterface/: CMakeLists.txt  Command.cpp  Command.h  CommandInfo.cpp  CommandInfo.h  CommandParser.cpp  CommandParser.h  CommandRepresent.cpp  CommandRepresent.h  CommandRepresent.rep  FunctionAdapter.h  GlobalService.cpp  GlobalService.h  Interface.cpp  Interface.h  Interface.rep  InterfaceBase.h  Interface_source.h  LocalInterface.cpp  LocalInterface.h  RemoteInterface.cpp  RemoteInterface.h  ServiceBase.cpp  ServiceBase.h  ServiceRepresent.cpp  ServiceRepresent.h  StdCommands.cpp  StdCommands.h  UIComponent.h  UIComponentManager.h  UIConfigMacro.h  UIConstants.cpp  UIConstants.h  UITest.cpp  UITest.h  classinterface.cpp  classinterface.h  command.cpp  command.h  commandadapter.cpp  (+14 more)
UserInterface/StringParser_gen/: CMakeLists.txt  stringparser.cpp
UserInterface_Example/: CMakeLists.txt  Local_main.cpp  Remote_main.cpp  slaves.cpp  slaves.h  worker.cpp  worker.h
